--- a/Task 2 - Portfolio/Portfolio.html
+++ b/Task 2 - Portfolio/Portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Syed Abdul Jaleel - Portfolio</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -82,7 +82,7 @@
             <div class="skill">HTML</div>
             <div class="skill">CSS</div>
             <div class="skill">JavaScript</div>
-            <!-- Add more skills as needed -->
+            
         </div>
     </section>
 
@@ -96,7 +96,7 @@
             Create a weather application that fetches real-time weather data from an API based on the user's location.
             To-Do List:
             
-            Develop a to-do list application with features such as adding tasks, marking them as complete, and filtering tasks based on status..</p>
+            Develop a to-do list application.</p>
     </section>
 
     <footer>
